plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.gongcha'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation "org.testcontainers:localstack"
    testImplementation "org.testcontainers:junit-jupiter"
//    testImplementation 'com.amazonaws:aws-java-sdk-test-utils:1.12.770' // aws 테스트를 위한 라이브러리

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // h2
    runtimeOnly 'com.h2database:h2'

    // Microsoft Azure MySQL
    runtimeOnly 'com.mysql:mysql-connector-j:9.0.0'

    // AWS S3 Bucket
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
//    implementation 'com.amazonaws:aws-java-sdk:1.12.770'
//    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE'

    // JJWT ( JWT 생성 및 검증 라이브러리 )
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // queryDSL
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"


    implementation 'org.springframework.boot:spring-boot-starter-webflux'



}

tasks.named('test') {
    useJUnitPlatform()
}
